all existing files

--- a/session 12/html/Calculator.html
+++ b/session 12/html/Calculator.html
@@ -11,7 +11,7 @@
 <body>
 	<table>
 		<tr>
-			<td colspan="10"><input id="result" type="text/"></td>
+			<td colspan="10"><input id="result" disabled type="text"></td>
 		</tr>
 		<tr>
 			<td><input class="btn" type="button" value="7" onclick="result.value+=this.value"></td>
@@ -19,6 +19,7 @@
 			<td><input class="btn" type="button" value="9" onclick="result.value+=this.value"></td>
 			<td><input class="btn" type="button" value="/" onclick="result.value+=this.value"></td>
 			<td><input class="btn" type="button" value="<-" onclick="result.value=result.value.substr(0,result.value.length-1)"></td>
+			<td><input class="btn" type="button" name="btn" value="%" onclick="result.value=eval(result.value/100)"></td>
 		</tr>
 		<tr>
 			<td><input class="btn" type="button" value="4" onclick="result.value+=this.value"></td>
@@ -26,18 +27,23 @@
 			<td><input class="btn" type="button" value="6" onclick="result.value+=this.value"></td>
 			<td><input class="btn" type="button" value="*" onclick="result.value+=this.value"></td>
 			<td><input class="btn" type="button" value="C" onclick="result.value=''"></td>
+			<td><input class="btn" type="button" value="√" name="square" onclick="result.value=eval(Math.sqrt(result.value))"></td>
 		</tr>
 		<tr>
 			<td><input class="btn" type="button" value="1" onclick="result.value+=this.value"></td>
 			<td><input class="btn" type="button" value="2" onclick="result.value+=this.value"></td>
 			<td><input class="btn" type="button" value="3" onclick="result.value+=this.value"></td>
 			<td><input class="btn" type="button" value="+" onclick="result.value+=this.value"></td>
+			<td><input class="btn" type="button" name="btn" value="sin" onclick="result.value=eval(Math.sin(result.value))"></td>
 			<td rowspan="2"><input id="equals"class="btn"type="button" value="=" onclick="result.value=eval(result.value)"></td>
+			
+
 		</tr>
 		<tr>
 			<td colspan="2"><input id="zero" class="btn" type="button" value="0" onclick="result.value+=this.value"></td>
 			<td><input class="btn" type="button" value=" " onclick="result.value+=this.value"></td>
 			<td><input class="btn" type="button" value="." onclick="result.value+=this.value"></td>
+			<td><input class="btn" type="button" name="cos" value="cos" onclick="result.value=eval(Math.cos(result.value))"></td>
 		</tr>
 	</table>
 	<script type="text/javascript" src="../js/calculator.js"></script>
