all existing files

--- a/session 12/html/Calculator.html
+++ b/session 12/html/Calculator.html
@@ -14,36 +14,42 @@
 			<td colspan="10"><input id="result" disabled type="text"></td>
 		</tr>
 		<tr>
-			<td><input class="btn" type="button" value="7" onclick="result.value+=this.value"></td>
-			<td><input class="btn" type="button" value="8" onclick="result.value+=this.value"></td>
-			<td><input class="btn" type="button" value="9" onclick="result.value+=this.value"></td>
-			<td><input class="btn" type="button" value="/" onclick="result.value+=this.value"></td>
-			<td><input class="btn" type="button" value="<-" onclick="result.value=result.value.substr(0,result.value.length-1)"></td>
-			<td><input class="btn" type="button" name="btn" value="%" onclick="result.value=eval(result.value/100)"></td>
+			<td><input class="press" type="button" value="7" onclick="result.value+=this.value"></td>
+			<td><input class="press" type="button" value="8" onclick="result.value+=this.value"></td>
+			<td><input class="press" type="button" value="9" onclick="result.value+=this.value"></td>
+			<td><input class="press" type="button" value="/" onclick="result.value+=this.value"></td>
+			<td><input class="press" type="button" value="<-" onclick="result.value=result.value.substr(0,result.value.length-1)"></td>
+			<td><input class="press" type="button" name="percent" value="%" onclick="result.value=eval(result.value/100)"></td>
+			<td><input class="press" type="button" name="bracket" value="(" onclick="result.value=this.value"></td>
+			<td><input class="press" type="button" name="bracket1" value=")" onclick="result.value=this.value"></td>
 		</tr>
 		<tr>
-			<td><input class="btn" type="button" value="4" onclick="result.value+=this.value"></td>
-			<td><input class="btn" type="button" value="5" onclick="result.value+=this.value"></td>
-			<td><input class="btn" type="button" value="6" onclick="result.value+=this.value"></td>
-			<td><input class="btn" type="button" value="*" onclick="result.value+=this.value"></td>
-			<td><input class="btn" type="button" value="C" onclick="result.value=''"></td>
-			<td><input class="btn" type="button" value="√" name="square" onclick="result.value=eval(Math.sqrt(result.value))"></td>
+			<td><input class="press" type="button" value="4" onclick="result.value+=this.value"></td>
+			<td><input class="press" type="button" value="5" onclick="result.value+=this.value"></td>
+			<td><input class="press" type="button" value="6" onclick="result.value+=this.value"></td>
+			<td><input class="press" type="button" value="*" onclick="result.value+=this.value"></td>
+			<td><input class="press" type="button" value="C" onclick="result.value=''"></td>
+			<td><input class="press" type="button" value="√" name="square" onclick="result.value=eval(Math.sqrt(result.value))"></td>
+			<td><input class="press" type="button" name="square1" value="^" onclick="result.value=eval(Math.pow(result.value))"></td>
+			<td><input class="press" type="button" name="factorial" value="!" onclick="result.value += this.value"></td>
 		</tr>
 		<tr>
-			<td><input class="btn" type="button" value="1" onclick="result.value+=this.value"></td>
-			<td><input class="btn" type="button" value="2" onclick="result.value+=this.value"></td>
-			<td><input class="btn" type="button" value="3" onclick="result.value+=this.value"></td>
-			<td><input class="btn" type="button" value="+" onclick="result.value+=this.value"></td>
-			<td><input class="btn" type="button" name="btn" value="sin" onclick="result.value=eval(Math.sin(result.value))"></td>
-			<td rowspan="2"><input id="equals" class="btn" type="button" value="=" onclick="result.value=eval(result.value)"></td>
-
-
+			<td><input class="press" type="button" value="1" onclick="result.value+=this.value"></td>
+			<td><input class="press" type="button" value="2" onclick="result.value+=this.value"></td>
+			<td><input class="press" type="button" value="3" onclick="result.value+=this.value"></td>
+			<td><input class="press" type="button" value="+" onclick="result.value+=this.value"></td>
+			<td><input class="press" type="button" name="btn" value="sin" onclick="result.value=eval(Math.sin(result.value))"></td>
+			<td><input class="press" type="button" name="tan" value="tan" onclick="result.value=eval(Math.tan(result.value))"></td>
+			<td><input class="press" type="button" name="log" value="log" onclick="result.value=eval(Math.log10(result.value))"></td>
+			<td rowspan="2"><input id="equals" class="press" type="button" value="=" onclick="result.value=eval(result.value)"></td>
 		</tr>
 		<tr>
-			<td colspan="2"><input id="zero" class="btn" type="button" value="0" onclick="result.value+=this.value"></td>
-			<td><input class="btn" type="button" value=" " onclick="result.value+=this.value"></td>
-			<td><input class="btn" type="button" value="." onclick="result.value+=this.value"></td>
-			<td><input class="btn" type="button" name="cos" value="cos" onclick="result.value=eval(Math.cos(result.value))"></td>
+			<td colspan="2"><input id="zero" class="press" type="button" value="0" onclick="result.value+=this.value"></td>
+			<td><input class="press" type="button" value=" " onclick="result.value+=this.value"></td>
+			<td><input class="press" type="button" value="." onclick="result.value+=this.value"></td>
+			<td><input class="press" type="button" name="cos" value="cos" onclick="result.value=eval(Math.cos(result.value))"></td>
+			<td><input class="press" type="button" name="cot" value="cot" onclick="result.value=eval((Math.sin(result.value))/(Math.cos(result.value)))"></td>
+			<td><input class="press" type="button" name="loga" value="e" onclick="result.value+=2.71656566"></td>
 		</tr>
 	</table>
 	<script type="text/javascript" src="../js/calculator.js"></script>
