--- a/session 15/html/homeWork2.html
+++ b/session 15/html/homeWork2.html
@@ -6,58 +6,31 @@
 </head>
 <body>
 	<h1>Apply Form</h1>
-<form>
+<form action="#" name="register">
 	<p>Name<span class="symbol">*</span>
-		<input type="text" name="name" id="displayName" placeholder="Nguyen Van A">
+		<input type="text" name="name" id="displayName" placeholder="Nguyen Van A"> <span id="errorName"></span>
 	</p>
 	<p>Date Of Birth<span class="symbol" id="displayDate">*</span>
-		<select>
-			<option>30</option>
-			<option>29</option>
-			<option>28</option>
-			<option>27</option>
-			<option>26</option>
-		</select>
-		<select>
-			<option>12</option>
-			<option>11</option>
-			<option>10</option>
-			<option>9</option>
-			<option>8</option>
-			<option>7</option>
-			<option>6</option>
-			<option>5</option>
-			<option>4</option>
-			<option>3</option>
-			<option>2</option>
-			<option>1</option>
-		</select>
-		<select>
-			<option>1990</option>
-			<option>1991</option>
-			<option>1992</option>
-			<option>1993</option>
-			<option>1994</option>
-			<option>1995</option>
-			<option>1996</option>
-			<option>1997</option>
-			<option>1998</option>
-			<option>1999</option>
-		</select>
+		Date: <input type="number" name="date" id="date"><span id="errorDate"></span>
+		Month: <input type="number" name="Month" id="month"><span id="errorMonth"></span>
+		Year: <input type="number" name="year" id="year"><span id="errorYear"></span>
 	</p>
 	<p>Gender <span class="symbol">* </span>
 		<input type="radio" name="Gender" id="displayGender">Male
 		<input type="radio" name="Gender" id="displayGender">Female
+		<span id="errorGender" ></span>
 	</p>
 	<p>Phone <span class="symbol"> *</span>
-		<input type="number" name="Phone" placeholder="123456" id="displayNumber">
+		<input type="number" name="Phone" placeholder="123456" id="displayNumber"> <span id="errorPhone"></span>
 	</p>
 	<p>
-		<input type="submit" name="Register" value="Register" id="displaySubmit" onclick="checkEmpty()">
+		<input type="button" name="Register" value="Register" id="displaySubmit" onclick="checkEmpty()"> 
+		<span id="rate"></span>
 	</p>
-
-
 </form>
+<div id="display"> </div>
+<div id="display1"></div>
+<div id="display2"></div>
 <script type="text/javascript" src="../js/homeWork2.js"></script>
 </body>
 </html>
