all existing files

--- a/session 15/html/homeWork1.html
+++ b/session 15/html/homeWork1.html
@@ -3,9 +3,12 @@
 <head>
 	<title>Create the slider javaScript</title>
 	<link rel="stylesheet" type="text/css" href="../css/homeWork1.css">
+	<link rel="shortcut icon" type="text/css" href="../image/team.png">
 </head>
 <body>
-
+<div id="slider">
+	
+</div>
 
 <script type="text/javascript" src="../js/homeWork1.js"></script>
 </body>
