all existing files

--- a/session 15/html/homeWork1.html
+++ b/session 15/html/homeWork1.html
@@ -6,9 +6,7 @@
 	<link rel="shortcut icon" type="text/css" href="../image/team.png">
 </head>
 <body>
-<div id="slider">
-	
-</div>
+<div id="slider"></div>
 
 <script type="text/javascript" src="../js/homeWork1.js"></script>
 </body>
