all existing files

--- a/session 15/html/homeWork1.html
+++ b/session 15/html/homeWork1.html
@@ -6,8 +6,12 @@
 	<link rel="shortcut icon" type="text/css" href="../image/team.png">
 </head>
 <body>
-<div id="slider"></div>
-
+	<h1>Welcome to natural beauty</h1>
+<div id="slider">
+	<img name="slide" height="500px" width="500px">
+</div>
+<input type="button" name="change" onclick="changeImage()" value=" Back "> 
+<input type="button" name="change1" value=" Next " onclick="changeImage()">
 <script type="text/javascript" src="../js/homeWork1.js"></script>
 </body>
 </html>
