start to learn Jquert

--- a/session 16/html/learn2.html
+++ b/session 16/html/learn2.html
@@ -6,10 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="../css/learn2.css">
 </head>
 <body>
-<!-- <div id="myBox">Demo1
-<div id="car"></div>
-</div> -->
-<!-- <a href="#" class="showHide">Show/Hide effect</a> -->
+<div id="myBox">Demo1</div>
+<a href="#" class="runMyBox">Animate</a>
+<a href="#" class="showHide">Show/Hide effect</a> 
 <p class="runImage">Let's go 1 </p>
  <div id="myBox1">
  	<img src="../image/car.png" width="100px" height="100px" alt="car">
