--- a/session 16/html/learn1.html
+++ b/session 16/html/learn1.html
@@ -37,6 +37,7 @@
 	<div id="display3"></div>
 	<div id="display4"></div>
 </div>
+	<script type="text/javascript" src="../js/jquery-3.4.0.min.js"></script>
 <script type="text/javascript" src="../js/learn1.js"></script>
 </body>
 </html>
