all existing files

--- a/session 16/html/learn2.html
+++ b/session 16/html/learn2.html
@@ -9,13 +9,30 @@
 <div id="myBox">Demo1</div>
 <a href="#" class="runMyBox">Animate</a>
 <a href="#" class="showHide">Show/Hide effect</a> 
-<p class="runImage">Let's go 1 </p>
+<br/>
+<p class="runImage"><input type="button" name="runImage" value="Let'go"></p>
  <div id="myBox1">
- 	<img src="../image/car.png" width="100px" height="100px" alt="car">
+ 	<img src="../image/car3.png" width="100px" height="100px" alt="car">
  </div>
- <p class="runImage1">Let's go 2</p>
+ <p class="runImage1"></p>
  <div id="myBox2">
  	<img src="../image/car1.png" width="100px" height="100px" alt="car">
+ </div>
+ <p class="runImage2"></p>
+ <div id="myBox3">
+ 	<img src="../image/car5.jpg" width="100px" height="100px" alt="car">
+ </div>
+ <p class="runImage3"></p>
+ <div id="myBox4">
+ 	<img src="../image/car6.png" width="100px" height="100px" alt="car">
+ </div>
+ <p class="runImage4"></p>
+ <div id="myBox5">
+ 	<img src="../image/car7.png" width="100px" height="100px" alt="car">
+ </div>
+<p class="runImage5"></p>
+ <div id="myBox6">
+ 	<img src="../image/car8.jpg" width="100px" height="100px" alt="car">
  </div>
 </body>
 <script type="text/javascript" src="../js/jquery-3.4.0.min.js"></script>
