all existing files

--- a/session 16/html/learn1.html
+++ b/session 16/html/learn1.html
@@ -12,10 +12,7 @@
 	<p>Name<span class="symbol">*</span>
 		<input type="text" name="name" id="displayName" placeholder="Nguyen Van A"> <span id="errorName"></span>
 	</p>
-	<p>Date Of Birth<span class="symbol" id="displayDate">*</span>
-		Date: <input type="text" name="date" id="date"><span id="errorDate"></span>
-		Month: <input type="text" name="Month" id="month"><span id="errorMonth"></span>
-		Year: <input type="text" name="year" id="year"><span id="errorYear"></span>
+	<p>Ngày Sinh <input type="date" name="ngaysinh" id="displayDate"></p>
 	</p>
 	<div id="negativeDate"></div>
 	<p>Gender <span class="symbol">* </span>
