all existing files

--- a/session 16/html/learn2.html
+++ b/session 16/html/learn2.html
@@ -10,16 +10,24 @@
 <a href="#" class="runMyBox">Animate</a>
 <a href="#" class="showHide">Show/Hide effect</a> 
 <br/>
-<p class="runImage"><input type="button" name="runImage" value="Let'go"></p>
+<p class="runImage"><button>Let's go</button>
  <div id="myBox1">
  	<img src="../image/car3.png" width="100px" height="100px" alt="car">
  </div>
+
  <p class="runImage1"></p>
  <div id="myBox2">
  	<img src="../image/car1.png" width="100px" height="100px" alt="car">
  </div>
- <p class="runImage2"></p>
- <div id="myBox3">
+ <p class="runImage2">
+ 	<header></header>
+ 	<nav></nav>
+ 	<footer></footer>
+ 	<span>Packing Place</span>
+ </p>
+
+ <p><img id="div1" src="../image/lua1.png" style="width: 100px; height: 100px; display: none;"></p>
+<!--  <div id="myBox3">
  	<img src="../image/car5.jpg" width="100px" height="100px" alt="car">
  </div>
  <p class="runImage3"></p>
@@ -33,7 +41,7 @@
 <p class="runImage5"></p>
  <div id="myBox6">
  	<img src="../image/car8.jpg" width="100px" height="100px" alt="car">
- </div>
+ </div> -->
 </body>
 <script type="text/javascript" src="../js/jquery-3.4.0.min.js"></script>
 <script type="text/javascript" src="../js/learn2.js"></script>
