all existing files

--- a/session 18/html/excercise.html
+++ b/session 18/html/excercise.html
@@ -5,7 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="../css/excercise.css">
 </head>
 <body>
-<h1>Electrical Bill</h1>
+<header>
+<h1>Electric Bill</h1>
 <form action="#">
 	<p>Name: <input id="name" type="text" name="Name" placeholder="Vanessa"><span id="errorName"></span></p>
 	<p>Address: <input id="address" type="text" name="address"><span id="errorAddress"></span></p>
@@ -14,10 +15,25 @@
 	<p>The last day  period: <input id="last" type="date" name="last"><span id="errorLast"></span></p>
 	<p>The first number: <input id="number1" type="text" name="first1"><span id="errorNumber1"></span></p>
 	<p>The last number: <input id="number2" type="text" name="first2"><span id="errorNumber2"></span></p>
-	<p>Note: <input id="note" type="text" name="Note"></p>
-	<p><input id="press" type="button" name="submit" value="Register" onclick="checkForm()"></p>
+	<p>Note: <input id="note" type="text" name="Note" placeholder="Write down your comment....."></p>
+	<p><input class="press" type="button" name="submit" value="Register" onclick="checkForm()"></p>
+	<p><input class="press1" type="button" name="print" value="print" onclick="printPersonalInformation()"></p>
+	<p><input class="press2" type="button" name="calculate" value="calculate" onclick="calculateEle()"></p>
+	<br/>
+	<p id="success"></p>
 </form>
-<div id="display"></div>
+</header>
+<div id="display"> List personal Information:
+	<div id="display1"></div>
+	<div id="display2"></div>
+	<div id="display3"></div>
+	<div id="display4"></div>
+	<div id="display5"></div>
+	<div id="display6"></div>
+	<div id="display7"></div>
+	<div id="display8"></div>
+	<div id="display9"></div>
+</div>
 <script type="text/javascript" src="../js/excercise.js"></script>
 </body>
 </html>
