--- a/session 18/html/excercise.html
+++ b/session 18/html/excercise.html
@@ -34,6 +34,7 @@
 	<div id="display8"></div>
 	<div id="display9"></div>
 </div>
-<script type="text/javascript" src="../js/excercise.js"></script>
+<script type="text/javascript" src="../js/jquery-3.4.0.min.js"></script>
+<script type="text/javascript" src="../js/excercise1.js"></script>
 </body>
 </html>
