all existing files

--- a/session 18/html/excercise.html
+++ b/session 18/html/excercise.html
@@ -7,7 +7,7 @@
 <body>
 <header>
 <h1>Electric Bill</h1>
-<form action="#">
+<form action="#" id="form">
 	<p>Name: <input id="name" type="text" name="Name" placeholder="Vanessa"><span id="errorName"></span></p>
 	<p>Address: <input id="address" type="text" name="address"><span id="errorAddress"></span></p>
 	<p>Phone number: <input id="phone" type="text" name="Phone"><span id="errorPhone"></span></p>
@@ -35,6 +35,6 @@
 	<div id="display9"></div>
 </div>
 <script type="text/javascript" src="../js/jquery-3.4.0.min.js"></script>
-<script type="text/javascript" src="../js/excercise1.js"></script>
+<script type="text/javascript" src="../js/excercise.js"></script>
 </body>
 </html>
