all existing file

--- a/session 20/html/homeWork.html
+++ b/session 20/html/homeWork.html
@@ -9,9 +9,10 @@
 <body>	
 <nav>
 	<div class="mainToobar">
-		<img id="logo" src="../image/loho.png" height="60px">
-		<button class="button1">Log in</button>
-		<button class="button2">Register</button>
+		<img id="logo" src="../image/loho.png" height="70px" width="200px">
+		<!-- <button class="button1">Log in</button> -->
+		<a class="button1" href="file:///D:/19PHP01/session%2015/html/homeWork2.html" style="list-style-type: none;">Log in</a>
+		<a class="button2" href="#">Register</a>
 		 <select title="Language">
 			<option>Language </option>
 			<option>VietNamese</option>
@@ -63,6 +64,9 @@
 	  <a class="prev" onclick="plusSlides(-1)"><</a>
 	  <a class="next" onclick="plusSlides(1)">></a> 
 </div>
+<footer>
+	
+</footer>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 	<script type="text/javascript" src="../js/homeWork.js"></script>
 	<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
