all existing files

--- a/session 20/html/homeWork.html
+++ b/session 20/html/homeWork.html
@@ -9,10 +9,9 @@
 <body>	
 <nav>
 	<div class="mainToobar">
-		<img id="logo" src="../image/loho.png" height="70px" width="200px">
-		<!-- <button class="button1">Log in</button> -->
-		<a class="button1" href="file:///D:/19PHP01/session%2015/html/homeWork2.html" style="list-style-type: none;">Log in</a>
-		<a class="button2" href="#">Register</a>
+		<p class="logo"><span> Natural</span> beauty</p>
+		<p><a class="button1" href="#">Log in</a></p>
+		<p><a class="button2" href="#">Register</a></p>
 		 <select title="Language">
 			<option>Language </option>
 			<option>VietNamese</option>
